# chat

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
src/: buffer_builder.py  buffer_parser.py  claude.py  main.py  message.py  text_collector.py
tests/: test_buffers.py
